gtk.css
headerbar.default-decoration {
  min-height: 0px;
  margin: 0px 0px 0px 0px;
  padding: 0px 0px 0px 0px;
}

headerbar.default-decoration button.titlebutton {
  min-height: 0px;
  min-width: 0px;
  margin: 0px 0px 0px 0px;
  padding: 0px 0px 0px 0px;
}

headerbar {
  min-height: 0px;
  margin: 0px 0px 0px 0px;
  padding: 0px 0px 0px 0px;
}

headerbar entry,
headerbar spinbutton,
headerbar button,
headerbar switch,
headerbar separator {
  margin: 0px 0px 0px 0px;
  padding: 0px 0px 0px 0px;
}

headerbar button.titlebutton.minimize,
headerbar button.titlebutton.maximize,
headerbar button.titlebutton.close {
  min-height: 0px;
  min-width: 0px;
  margin: 0px 0px 0px 0px;
  padding: 0px 0px 0px 0px;
}

